# study-buddy

./: .gitignore  Cargo.toml  README.md  focus.iss
.github/workflows/: release.yml
src/: data.rs  main.rs  platform.rs  sound.rs  storage.rs  theme.rs
