[package]
name = "study-buddy"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "focus"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
rodio = { version = "0.19", default-features = false }
